<resources>
    <string name="app_name">AccessUW</string>
    <string name="action_settings">Settings</string>
    <string name="main_campus_map_desc">Main campus map</string>
    <string name="search_start_hint">Enter a start location…</string>
    <string name="search_end_hint">Enter an end location…</string>
    <string name="button_toggle_wheel_chair">Wheelchair</string>
    <string name="button_toggle_no_stairs">No stairs</string>
    <string name="desc_building_name_view_default">The Hub</string>
    <string name="desc_building_short_name_view_default">Building code: HUB</string>
    <string name="desc_elevator_info_view_default">Elevator access: All floors</string>
    <string name="desc_accessible_restroom_view_default">Accessible restroom: Yes</string>
    <string name="desc_gender_neutral_restroom_view_default">Gender-neutral restroom: 2nd floor</string>
    <string name="button_find_route">Find Route</string>
    <string name="button_start_route">Start Route</string>
    <string name="back_arrow_desc">Back arrow</string>
    <string name="nav_destination_view_default">To: The Hub (SW)</string>
    <string name="swap_button_desc">Swap start and end locations</string>
    <string name="current_route">Current route</string>
    <string name="gender_neutral_restroom_search_result">Nearest gender-neutral restroom</string>
    <string name="zoom_in_plus">+</string>
    <string name="zoom_out_minus">-</string>
    <string name="zoom_in_desc">Zoom in</string>
    <string name="zoom_out_desc">Zoom out</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
</resources>