<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    tools:context=".MainActivity">

    <include layout="@layout/map_layout" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AccessUW.AppBarOverlay">

        <AutoCompleteTextView
            android:id="@+id/searchStartView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:layout_below="@+id/sampleTextView"
            android:layout_margin="@dimen/search_bar_margin"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/search_start_hint"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/search_bar_text_padding_side"
            android:paddingEnd="@dimen/search_bar_text_padding_side"
            android:singleLine="true"
            android:textColor="@color/purple_700"
            android:textIsSelectable="true">

            <requestFocus />
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/searchEndView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:layout_below="@+id/sampleTextView"
            android:layout_margin="@dimen/search_bar_margin"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/search_end_hint"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/search_bar_text_padding_side"
            android:paddingEnd="@dimen/search_bar_text_padding_side"
            android:singleLine="true"
            android:textColor="@color/purple_700"
            android:textIsSelectable="true">

            <requestFocus />
        </AutoCompleteTextView>

        <LinearLayout
            android:id="@+id/routeFilterButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/filterWheelchair"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/purple_700"
                android:textOff="@string/button_toggle_wheel_chair"
                android:textOn="@string/button_toggle_wheel_chair"
                android:textSize="@dimen/search_bar_text_size" />

            <ToggleButton
                android:id="@+id/filterNoStairs"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_bar_height"
                android:layout_weight="2"
                android:textColor="@color/purple_700"
                android:textOff="@string/button_toggle_no_stairs"
                android:textOn="@string/button_toggle_no_stairs"
                android:textSize="@dimen/search_bar_text_size" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/email"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>